# MyCudaExamples

./: .gitignore  CMakeLists.txt  README.en.md  README.md  TODO.md
common/: CMakeLists.txt  CRandFiller.h  CTensor.cpp  CTensor.h  cnpy.cpp  cnpy.h  common.h
data/: .gitignore  generate_gold_data.py
example1/: CMakeLists.txt  kernel1.cu  main.cpp
example1/kernels/1/: kernel.cu  kernel.h
example2/: CMakeLists.txt  main.cpp
example2/kernels/: readme.md
example2/kernels/1/: kernel.cu  kernel.h  readme.md
example2/kernels/2/: kernel.cu  readme.md
example2/kernels/3/: kernel.cu  kernel.h  readme.md
example2/kernels/4/: kernel.cu  readme.md
example3/: CMakeLists.txt  main.cpp
example3/kernels/1/: kernel.cu  readme.md
example3/kernels/2/: kernel.cu  kernel.h  readme.md
example3/kernels/3/: kernel.cu  kernel.h  readme.md
example3/kernels/4/: kernel.cu  readme.md
example3/kernels/5/: kernel.cu  kernel.h  readme.md
example4/: CMakeLists.txt  main.cpp
example4/kernels/1/: kernel.cu  kernel.h  readme.md
example4/kernels/2/: kernel.cu  kernel.h  readme.md
example4/kernels/3/: kernel.cu  kernel.h  readme.md
example5/: CMakeLists.txt  main.cpp
example5/kernels/1/: kernel.cu  kernel.h  readme.md
